run: Workaround Java 17 issue with --add-opens option
This is a first workaround to get Gitblit running under Java 17.
Setting `--add-opens java.base/java.lang=ALL-UNNAMED` fixes the problem
of Guice trying to do its thing.
But I already observed more problems with Lucene using illegal access,
too. So this can only be a beginning.
At some point a clean fix means getting rid of illegal accesses.
If possible.